update: auth router swagger文件完成
